# reth-core

./: .gitignore  Cargo.toml  README.md  deny.toml  release.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
crates/codecs/: Cargo.toml
crates/codecs-derive/: Cargo.toml
crates/codecs-derive/src/: lib.rs
crates/codecs-derive/src/compact/: flags.rs  generator.rs  mod.rs  structs.rs
crates/codecs/src/: lib.rs  test_utils.rs
crates/codecs/src/alloy/: header.rs  optimism.rs
crates/codecs/src/alloy/transaction/: ethereum.rs  mod.rs  optimism.rs
crates/codecs/src/compress/: mod.rs  scale.rs
crates/primitives-traits/: Cargo.toml
crates/primitives-traits/src/: account.rs  lib.rs
crates/primitives-traits/src/block/: recovered.rs
scripts/: check_no_std.sh
