[workspace]
members = ["crates/codecs", "crates/codecs-derive", "crates/primitives-traits", "crates/rpc-traits", "crates/zstd-compressors"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.93"
version = "0.1.0"
license = "MIT OR Apache-2.0"
homepage = "https://paradigmxyz.github.io/reth"
repository = "https://github.com/paradigmxyz/reth-core"

[workspace.dependencies]
# internal
reth-codecs = { version = "0.1.0", path = "crates/codecs", default-features = false }
reth-codecs-derive = { version = "0.1.0", path = "crates/codecs-derive" }
reth-primitives-traits = { version = "0.1.0", path = "crates/primitives-traits", default-features = false }
reth-rpc-traits = { version = "0.1.0", path = "crates/rpc-traits", default-features = false }
reth-zstd-compressors = { version = "0.1.0", path = "crates/zstd-compressors", default-features = false }

# eth/alloy
alloy-primitives = { version = "1.5.6", default-features = false, features = ["map-foldhash"] }
alloy-rlp = { version = "0.3.13", default-features = false, features = ["core-net"] }
alloy-rpc-types-eth = { version = "1.7.3", default-features = false }
alloy-trie = { version = "0.9.4", default-features = false }
alloy-consensus = { version = "1.7.3", default-features = false }
alloy-eips = { version = "1.7.3", default-features = false }
alloy-network = { version = "1.8.2", default-features = false }
alloy-signer = { version = "1.8.2", default-features = false }
alloy-genesis = { version = "1.7.3", default-features = false }
revm-primitives = { version = "22.1.0", default-features = false }
revm-bytecode = { version = "9.0.0", default-features = false }
revm-state = { version = "10.0.0", default-features = false }

# crypto
secp256k1 = { version = "0.30", default-features = false, features = ["global-context", "recovery"] }

# misc
bytes = { version = "1.11.1", default-features = false }
byteorder = "1"
dashmap = "6.0"
derive_more = { version = "2", default-features = false, features = ["full"] }
modular-bitfield = "0.13.1"
once_cell = { version = "1.19", default-features = false, features = ["critical-section"] }
parity-scale-codec = { version = "3.2.1", features = ["bytes"] }
quanta = "0.12"
rayon = "1.7"
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
thiserror = { version = "2.0.0", default-features = false }
visibility = "0.1.1"
zstd = "0.13"
arbitrary = "1.3"
rand = "0.9"
rand_08 = { package = "rand", version = "0.8" }

# derive deps
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

# test deps
test-fuzz = "7"
proptest = "1.6"
proptest-arbitrary-interop = "0.1"
rstest = "0.26.1"
similar-asserts = { version = "1.5.0", features = ["serde"] }

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2024_incompatible_pat = "warn"
rustdoc.all = "warn"

[workspace.lints.clippy]
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing-const-for-fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
result_large_err = "allow"
redundant_clone = "warn"
string_lit_as_bytes = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"
as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
debug_assert_with_mut_call = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
too_long_first_doc_paragraph = "allow"
